<resources>
    <string name="app_name">KwikQ</string>
    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Sign in to continue to your dashboard</string>
    <string name="register_title">Create your account</string>
    <string name="register_subtitle">Get started - it only takes a minute</string>
    <string name="brand_subtitle">Library Queue Management</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Sign in</string>
    <string name="login_loading">Signing in...</string>
    <string name="register">Create account</string>
    <string name="register_loading">Creating account...</string>
    <string name="logout">Sign out</string>
    <string name="no_account_register">New here? Create an account</string>
    <string name="have_account_login">Already have an account? Sign in</string>
    <string name="register_success">Registration successful. You can now sign in.</string>
    <string name="validation_name">Name must be at least 2 characters.</string>
    <string name="validation_email">Please enter a valid email address.</string>
    <string name="validation_password">Password must be at least 6 characters.</string>
    <string name="validation_password_required">Password is required.</string>
    <string name="validation_password_mismatch">Passwords do not match.</string>
    <string name="network_error">Network error: %1$s</string>
    <string name="welcome_default">Hello</string>
    <string name="welcome_user">Hello, %1$s</string>
    <string name="login_success_landing">Queue features coming soon. Your account is ready to go.</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="role_display">Role: %1$s</string>
</resources>